Updated COMP 992 paper

--- a/comp992/docs/spie2013PaperV1.tex
+++ b/comp992/docs/spie2013PaperV1.tex
@@ -123,7 +123,7 @@ where $G(x,y,z,\sigma)$ represents the convolution with a Gaussian operator of v
 
 \begin{figure}[htb]
 \label{fig:Correspondence}
-\includegraphics[width=1\columnwidth]{images/Corr1.png}
+\includegraphics[width=1\columnwidth]{images/correspondence.png}
 \centering
 \caption{Example of one set of correspondence points.}
 \end{figure}
